CSS to fix vertical spacing of mountain landmark blocks

--- a/fell_english_hexpop_A5.css
+++ b/fell_english_hexpop_A5.css
@@ -115,3 +115,6 @@ span.mountain_icon {
   margin-left: -0.15rem;
   margin-right: -0.1rem;
 }
+h3.mountain_landmark {
+  margin-top: -0.48rem;
+}
